Added a Members on the Navigation

--- a/src/styles/officers.css
+++ b/src/styles/officers.css
@@ -17,6 +17,20 @@
     align-content: center;
     gap: 10px;
 }
+.board-members{
+  display: grid;
+  grid-template-columns: repeat(3, 300px);
+  justify-content: space-evenly;
+  align-content: center;
+  gap: 10px;
+}
+.brd-member-title{
+  display: flex;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 30px;
+  padding-bottom: 30px;
+}
 .schools{
     padding-bottom: 20px;
 }
@@ -41,7 +55,7 @@ br{
     display: none;
 }
 @media(width < 720px){
-    .members{
+    .members, .board-members{
         display: flex;
         flex-wrap: wrap ;
     }
