--- a/src/styles/officers.css
+++ b/src/styles/officers.css
@@ -5,10 +5,20 @@
   display: grid;
   place-content: center;
   font-size: 25px;
+  padding-bottom: 25px;
 }
 .info > h4 {
   text-align: center;
   font-size: 15px;
+}
+.header{
+  font-size:1.2em;
+  font-weight: 600;
+}
+.head{
+  font-size: 1.1em;
+  font-weight: 600;
+  text-align: center;
 }
 .members{
     display: grid;
@@ -37,6 +47,10 @@
 .member{
     text-align: center;
 }
+.member > h3{
+  font-size: 18px;
+  font-weight: 600;
+}
 .member-img{
     display: flex;
     justify-content: center;
@@ -45,7 +59,7 @@
 .imgs {
   width: 150px;
   height: 150px;
-  border-radius: 50%;
+
   margin-bottom: 10px;
 }
 .position {
