--- a/src/styles/members.css
+++ b/src/styles/members.css
@@ -6,15 +6,53 @@
   padding: 10px;
   font-size: 30px;
 }
-.list-members{
+.members-imgs{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 20px;
+ 
+  gap: 5px;
+}
+.members-imgs > img{
+  margin: 10px;
+  width: 650px;
 }
 
-.list-members > li > a{
-  padding: 10px;
-  color: black;
-  text-decoration: none;
+.open-imgs{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  display: none;
+
+}
+.close-imgs{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: #3a4a6da9;
+  z-index: -1;
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
+}
+.open-imgs.active{
+  display: flex;
+}
+
+@media (width < 600px){
+  .members-imgs{
+    display: flex;
+    position: fixed;
+    flex-wrap: wrap;
+  }
+
+  .open-imgs > img{
+
+    width: 400px;
+  }
 }
