--- a/src/main.css
+++ b/src/main.css
@@ -23,7 +23,7 @@
   background-color: var(--main-color);
 }
 .logo > a > img {
-  margin: 15px;
+  margin: 10px;
   width: 520px;
 }
 .nav-items {
@@ -304,7 +304,7 @@ body {
     font-size: 15px;
   }
   .img-content > img {
-    width: 400px;
+    width: 380px;
   }
   .more {
     display: flex;
@@ -314,7 +314,24 @@ body {
     width: 60px;
   }
   .logo > a > img {
-    margin: 15px;
-    width: 320px;
+    margin-left: 0px;
+    width: 280px;
+  }
+  br{
+    display: none;
+  }
+  .introduction{
+    text-align: justify;
+    font-size: 15px;
+  }
+}
+
+@media(width < 420px){
+  .logo > a > img {
+    margin-left: 0px;
+    width: 300px;
+  }
+  .img-content > img {
+    width: 350px;
   }
 }
