--- a/src/styles/members.css
+++ b/src/styles/members.css
@@ -1,24 +1,28 @@
-.AMembers{
+.AMembers {
   width: 100%;
 }
-.members-list > h1{
+.members-list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.members-list > h1 {
   text-align: center;
   padding: 10px;
   font-size: 30px;
 }
-.members-imgs{
+.members-imgs {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
- 
-  gap: 5px;
+  flex-wrap: wrap;
 }
-.members-imgs > img{
+.members-imgs > img {
   margin: 10px;
   width: 650px;
 }
 
-.open-imgs{
+.open-imgs {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,9 +33,8 @@
   height: 100%;
   flex-direction: column;
   display: none;
-
 }
-.close-imgs{
+.close-imgs {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -40,19 +43,24 @@
   filter: blur(2px);
   -webkit-filter: blur(2px);
 }
-.open-imgs.active{
+.open-imgs.active {
   display: flex;
 }
 
-@media (width < 600px){
-  .members-imgs{
-    display: flex;
-    position: fixed;
-    flex-wrap: wrap;
+@media (width < 600px) {
+  .members-imgs > img {
+  }
+  .open-imgs > img {
+    width: 500px;
+    padding: 60px;
   }
 
-  .open-imgs > img{
-
-    width: 400px;
+  .members-imgs > img {
+    width: 300px;
+  }
+}
+@media (width < 420px) {
+  .members-imgs > img {
+    width: 350px;
   }
 }
