--- a/src/styles/members.css
+++ b/src/styles/members.css
@@ -53,10 +53,11 @@ button{
   font-size: 4rem;
   top: 50%;
   transform: translateY(-50%);
-  color: aliceblue;
+  color: #2f2f2f;
   cursor: pointer;
-  border-radius: .25rem;
+ 
   background-color: rgba(0, 0, 0, .1);
+
 }
 button:hover, button:focus{
   color: white;
@@ -72,8 +73,7 @@ button.next{
   right: 0;
 }
 @media (width < 600px) {
-  .members-imgs > img {
-  }
+
   .open-imgs > img {
     width: 500px;
     padding: 60px;
@@ -82,9 +82,14 @@ button.next{
   .members-imgs > img {
     width: 300px;
   }
+  button{
+   
+  }
+
 }
 @media (width < 420px) {
   .members-imgs > img {
     width: 350px;
   }
+
 }
