--- a/src/main.css
+++ b/src/main.css
@@ -267,9 +267,10 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   flex-direction: column;
-  padding: 7dvh;
+  padding: 10dvh;
 }
-.informations > h2,h3{
+.informations > h2,
+h3 {
   font-size: 1.5em;
   color: white;
   padding-bottom: 5px;
@@ -286,9 +287,9 @@ body {
   border-radius: 5px;
   background-color: rgb(75, 0, 130);
 }
-.button:hover{
-    background-color: rgb(232, 228, 201);
-    color: #2f2f2f;
+.button:hover {
+  background-color: rgb(232, 228, 201);
+  color: #2f2f2f;
 }
 .imgs {
   width: 45%;
@@ -298,6 +299,91 @@ body {
   width: 550px;
 }
 /*End of Registration*/
+
+/*Start of Mission & Vision*/
+.MisVis {
+  width: 100%;
+}
+.contains {
+  display: flex;
+  justify-content: space-evenly;
+}
+.mission,
+.vision {
+  width: 50%;
+  border: 1px solid black;
+  margin: 20px;
+  padding: 15px;
+  text-align: justify;
+}
+.intro {
+  text-align: center;
+  color: black;
+}
+.logos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logos > img {
+  width: 300px;
+}
+.buttons {
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+}
+.buttons > a {
+  border: 1px solid black;
+  padding: 10px 30px 10px;
+  text-decoration: none;
+  border-radius: 5px;
+  color: beige;
+  background-color: rgb(75, 0, 130);
+  text-align: center;
+}
+.buttons > a:hover {
+  background-color: rgb(232, 228, 201);
+  color: #2f2f2f;
+}
+/*End of Mission & Vision*/
+.Resources {
+  width: 100%;
+  background-color: rgb(80, 200, 120);
+}
+.Resources > h1{
+  color: white;
+}
+.content {
+  display: flex;
+  justify-content: space-evenly;
+
+}
+.content > div{
+  width: 75%;
+  margin: 0 30px;
+}
+
+
+.titles{
+  text-align: center;
+  font-size: 1.2rem;
+  color: black;
+  border-radius: 5px;
+  padding: 10px 20px 10px;
+  background-color: var(--main-color);
+}
+.rep-list{
+  padding-top: 10px;
+}
+.reps{
+  list-style: none;
+  padding: 5px;
+}
+.reps > a{
+  text-decoration: none;
+  color: var(--main-color);
+}
 
 @media (width < 720px) {
   .navham {
@@ -380,6 +466,20 @@ body {
   }
   .imgs {
     display: none;
+  }
+
+  .contains {
+    margin: 10px;
+    flex-wrap: wrap;
+  }
+  .mission,
+  .vision {
+    text-align: justify;
+    width: 100%;
+    padding: 5px;
+  }
+  .content{
+    flex-wrap: wrap;
   }
 }
 
