--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,7 @@
   --main-color: rgb(255, 245, 224);
   --hover-: rgb(255, 167, 86);
   --hover-2: rgb(224, 176, 60);
+  --button-color: rgb(45, 48, 151);
 }
 
 * {
@@ -132,18 +133,18 @@ body {
   background-color: var(--main-color);
 }
 
-
 /*Global Variables*/
-.min-height{
+.min-height {
   min-height: 100vh;
 }
 
 /*Start of Home Section*/
 #Home {
   width: 100%;
-  background-image: url('/assets/banner/Hero.png');
+  background-image: url("/assets/banner/Hero.png");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
+  background-position: center;
 }
 .contents {
   display: flex;
@@ -184,7 +185,6 @@ body {
   margin: 10px;
 }
 
-
 /*Start of Registration*/
 .Registration {
   width: 100%;
@@ -197,14 +197,14 @@ body {
 
 .informations {
   background-color: rgb(80, 200, 120);
-  width: 100%;
+  width: 100dvw;
+  min-height: 90dvh;
   display: flex;
   justify-content: center;
+
   flex-wrap: wrap;
   flex-direction: column;
   padding: 10dvh;
-
-  
 }
 .informations > h2,
 h3 {
@@ -223,20 +223,18 @@ h3 {
   padding: 10px;
   color: white;
   border-radius: 5px;
-  background-color: rgb(75, 0, 130);
+  background-color: var(--button-color);
 }
 .button:hover {
   background-color: rgb(232, 228, 201);
   color: #2f2f2f;
 }
 .imgs {
-  width: 40dvw;
-  height: 40dvw; 
   display: flex;
+  justify-content: center;
 }
 .imgs > img {
-  width: 28dvw;
- 
+  width: 27vw;
 }
 /*End of Registration*/
 
@@ -250,7 +248,8 @@ h3 {
   justify-content: space-evenly;
 }
 .mission,
-.vision, .core-values {
+.vision,
+.core-values {
   width: 33%;
   border: 1px solid black;
   margin: 10px;
@@ -264,11 +263,10 @@ h3 {
 .logos {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
 }
 .logos > img {
-  width: auto;
-  object-fit: cover;
+  height: 12dvh;
 }
 .buttons {
   display: flex;
@@ -281,7 +279,7 @@ h3 {
   text-decoration: none;
   border-radius: 5px;
   color: beige;
-  background-color: rgb(75, 0, 130);
+  background-color: var(--button-color);
   text-align: center;
 }
 .buttons > a:hover {
@@ -292,28 +290,24 @@ h3 {
 .Resourcess {
   width: 100%;
   background-color: rgb(80, 200, 120);
-
 }
-.Resourcess > h1{
-
+.Resourcess > h1 {
   color: white;
   padding-bottom: 15px;
 }
-.def-height{
+.def-height {
   min-height: 100vh;
 }
 .content {
   display: flex;
   justify-content: space-evenly;
-
 }
-.content > div{
+.content > div {
   width: 75%;
   margin: 0 30px;
 }
 
-
-.titless{
+.titless {
   text-align: center;
   font-size: 1.2rem;
   color: black;
@@ -321,23 +315,48 @@ h3 {
   padding: 10px 20px 10px;
   background-color: var(--main-color);
 }
-.rep-list{
+.rep-list {
   padding-top: 10px;
 }
-.reps{
+.reps {
   list-style: none;
   padding: 5px;
 }
-.reps > a{
+.reps > span {
+  font-weight: 600;
+  font-size: 1.3em;
+}
+.reps > a {
   text-decoration: none;
   color: var(--main-color);
 }
-@media(width > 650px){
-  .informations{
-  padding-top: 20dvh;
-  padding-bottom: 30dvh;
+
+/*Start of Footer*/
+.footer {
+  width: 100%;
+  background-color: var(--main-color);
+  color: #2f2f2f;
+
+}
+.main-element {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 15px;
+}
+.numbers {
+  display: flex;
+  flex-direction: column;
+}
+.numbers > a {
+  text-decoration: none;
+  color: #2f2f2f;
+}
+@media (width > 650px) {
+  .informations {
+    padding-top: 20dvh;
+    padding-bottom: 30dvh;
   }
-  .Resourcess{
+  .Resourcess {
     padding: 10dvh;
   }
 }
@@ -346,7 +365,7 @@ h3 {
     display: block;
     z-index: 2;
   }
-  
+
   .navham.active .bar:nth-child(2) {
     opacity: 0;
   }
@@ -410,8 +429,8 @@ h3 {
     text-align: justify;
     font-size: 15px;
   }
- 
-  .informations{
+
+  .informations {
     padding-bottom: 35dvh;
   }
   .imgs {
@@ -423,16 +442,24 @@ h3 {
     flex-wrap: wrap;
   }
   .mission,
-  .vision,.core-values {
+  .vision,
+  .core-values {
     text-align: justify;
     width: 100%;
     padding: 10px;
   }
-  .content{
+  .content {
     flex-wrap: wrap;
   }
-  .informations{
+  .main-element{
+    display: flex;
+    justify-content: space-evenly;
     
+    flex-direction: column;
+  }
+  .numbers{
+    padding-top: 20px;
+   
   }
 }
 
