--- a/src/styles/misvis.css
+++ b/src/styles/misvis.css
@@ -62,6 +62,11 @@
 .footer{
   border: 1px solid black;
 }
+.main-Logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @media (width < 720px) {
   .container {
     flex-wrap: wrap;
